# logos

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
data/original/books/: Bases para tu Conducta.doc  Curso de Iniciación Logosófica.doc  Deficiencias y propensiones del ser humano.doc  Diálogos.doc  El Espíritu.doc  El Señor de Sándara.doc  Exégesis Logosofica.doc  Intermedio Logosofico.doc  Introduccion al Conocimiento Logosofico.doc  La Herencia de Si Mismo.doc  Logosofía Ciencia y Metodo.doc  Mecanismo de la vida Consciente.doc
data/prepared/books/: Bases para tu Conducta.txt  Curso de Iniciación Logosófica.txt  Deficiencias y propensiones del ser humano.txt  Diálogos.txt  El Espíritu.txt  El Señor de Sándara.txt  Exégesis Logosofica.txt  Intermedio Logosofico.txt  Introduccion al Conocimiento Logosofico.txt  La Herencia de Si Mismo.txt  Logosofía Ciencia y Metodo.txt  Mecanismo de la vida Consciente.txt
scripts/: doc2txt.py
src/logos/: __init__.py  config.py
src/logos/app/: __init__.py  main.py
src/logos/app/components/: __init__.py  button.py  container.py  empty.py  paginate.py  paragraph.py  theme.py
src/logos/cli/: __init__.py
src/logos/data/: __init__.py  extract.py  index.py  store.py
src/logos/entities/: __init__.py  paragraph.py  query.py  source.py  text.py
src/logos/search/: __init__.py  index.py  rerank.py
