[tool.poetry]
name = "logos"
version = "0.1.0"
description = "A semantic search engine for Logosophical teachings."
authors = ["Marcelo Soares <marcelo.me.soares@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
llama-index = "^0.9.15.post2"
sentence-transformers = "^2.2.2"
spacy = "^3.7.2"
weaviate-client = "4.4b1"
typer = "^0.9.0"

[tool.poetry.group.dev.dependencies]
doc2docx = "^0.2.4"
docx2txt = "^0.8"
ipykernel = "^6.27.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
