[tool.poetry]
name = "logos"
version = "0.1.0"
description = "A semantic search engine for Logosophical teachings."
authors = ["Marcelo Soares <marcelo.me.soares@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.scripts]
logos = "logos.cli:app"

[tool.poetry.dependencies]
python = "^3.11"
accelerate = "^0.25.0"  # To enable PyTorch code to run across distributed configuration
einops = "^0.7.0"  # Improve tensor operations
llama-index = "^0.9.15.post2"
pydantic = "^2.7.1"
txtai = {extras = ["database", "graph"], version = "^7.1.0"}
typer = "^0.9.0"
pre-commit = "^3.7.1"
sentence-transformers = "^2.7.0"

[tool.poetry.group.dev.dependencies]
doc2docx = "^0.2.4"
docx2txt = "^0.8"
ipykernel = "^6.29.4"
ipywidgets = "^8.1.2"
matplotlib = "^3.9.0"
pytest = "^8.2.1"
ruff = "^0.4.5"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN101",  # Missing type annotation for `self` in method
    "ANN102",  # Missing annotation for cls
    "ANN401",  # Dynamically typed expressions (typing.Any) are disallowed in `__context`
    "C408",    # Unnecessary `dict` call (rewrite as a literal)
    "FA102",   # Missing from future import annotations
    "D105",    # Missing docstring in magic method
    "D200",    # One-line docstring should fit on one line
    "D202",    # No blank lines allowed after function docstring
    "D205",    # 1 blank line required between summary line and description
    "D203",    # 1 blank line required before class docstring
    "D212",    # Multi-line docstring summary should start at the first line
    "D407",    # Missing dashed underline after section
    "D413",    # Missing blank line after last section
    "EM101",   # Exception must not use a string literal, assign to variable first
    "EM102",   # Exception must not use an f-string literal, assign to variable first
    "FA100",   # Add `from __future__ import annotations` to simplify `typing.Optional`
    "FIX002",  # Line contains TODO, consider resolving the issue
    "PTH201",  # Do not pass the current directory explicitly to `Path`
    "SIM118",  # Use `key in dict` instead of `key in dict.keys()`
    "TD002",   # Missing author in TODO
    "TD003",   # Missing issue link on the line following this TODO
    "TRY003",  # Avoid specifying long messages outside the exception class
]

[tool.ruff.lint.per-file-ignores]
"!src/**" = ["INP001"]  # File is part of an implicit namespace package
"_local_test*" = [
    "ERA001",   # Found commented-out code
    "PD901",    # Avoid using the generic variable name `df` for DataFrames
    "PLR0913",  # Too many arguments in function definition (6 > 5)
    "T201",     # `print` found
]

[tool.ruff.lint.isort]
case-sensitive = true
combine-as-imports = true
lines-after-imports = 2
lines-between-types = 1

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
